[tool.poetry]
name = "code4us"
version = "0.1.0"
description = ""
authors = ["Daniel Stocker <daniel.stocker@mgb.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
